made the first three sections

--- a/src/index.html
+++ b/src/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pulse</title>
     <link rel="stylesheet" href="./css/fonts.css">
+    <link rel="stylesheet" href="./css/normalize.css">
     <link rel="stylesheet" href="./css/style.min.css">
 </head>
 <body>
@@ -19,7 +20,7 @@
                     <div class="header__city">Garmin, Polar, Suunto</div>
                 </div>
                 <div class="header__call">
-                    <div class="header__phone">+7 (499) 922-89-74
+                    <div class="header__phone"><a href="tel:+74999228974">+7 (499) 922-89-74</a> 
                     </div>
                     <button class="button button_small">заказать звонок</button>
                 </div>
@@ -37,7 +38,7 @@
 
                     <div class="header__item">
                         <img class="header__item-img" src="./icons/top_icon2.png"></img>
-                        <div class="header__item-descr">Бесплатнаядоставка</div>
+                        <div class="header__item-descr">Бесплатная доставка</div>
                     </div>
 
                     <div class="header__item">
@@ -46,7 +47,7 @@
                     </div>
                 </div>
                 <button class="button">заказать консультацию</button>
-                <p class="header__link">или<a href="#">перейти в каталог</a></p>
+                <p class="header__link">или <a href="#">перейти в каталог</a></p>
             </div>
         </div>
     </header>
@@ -84,7 +85,7 @@
                         Учим бегать
                     </div>
                     <div class="advant__item-descr">
-                        Помогаем с обучением правильной технике бега! Дружим с крупнейшей школой бега в России - <span class="advant__partners">I LOVE RUNNING.</span>
+                        Помогаем с обучением правильной технике бега! Дружим с крупнейшей школой бега в России - <a class="advant__partners" href="#">I LOVE RUNNING.</a>
                     </div>
                 </div>
             </div>
@@ -92,8 +93,8 @@
     </section>
     <section class="consult">
         <div class="container">
-            <h2 class="title title_white">Получите бесплатную консультацию по подбору пульсометра</h2>
-            <p class="consult__form-title">Просто заполните форму заявки и мы перезвоним вам в течении 10 минут</p>
+            <h2 class="title title_white">Получите бесплатную консультацию <br> по подбору пульсометра</h2>
+            <p class="consult__form-title">Просто заполните форму заявки <br> и мы перезвоним вам в течении 10 минут</p>
             <form class="form" name="main-form" action="#" autocomplete="on" method="POST">
                 <input type="text" placeholder="Ваше имя" required>
                 <input type="text" placeholder="Ваш телефон"required>
